# instagram_automation

./: .env.example  .gitignore  pyproject.toml  pytest.ini  streamlit_app.py
TODO/: CI_CD_com_docker.md  Plano_de_implementação.md  implementando_orquestradores.md
docs/: arquitetura.md  dependency_management.md  llm_contract.md
scripts/: __init__.py  run_orchestrator.py  run_publisher.py
scripts/dev/: generate_dossier.py
src/: config.py  logger.py
src/adapters/: __init__.py
src/adapters/llm/: __init__.py  gemini_adapter.py
src/adapters/media/: __init__.py  google_image_adapter.py
src/adapters/observability/: __init__.py  logging_adapter.py
src/adapters/persistence/: __init__.py  file_state_repository.py  file_workflow_repository.py  repositories.py  supabase_adapter.py
src/adapters/social/: __init__.py  instagram_adapter.py
src/adapters/storage/: __init__.py  supabase_storage_adapter.py
src/adapters/theming/: __init__.py  file_system_theme_loader.py
src/adapters/ui/: __init__.py
src/assets/themes/default/: theme.json
src/assets/themes/default/fonts/Epunda_Sans/: EpundaSans-Bold.ttf:Zone.Identifier
src/assets/themes/default/fonts/Inter/: Inter_28pt-BlackItalic.ttf:Zone.Identifier
src/assets/themes/default/fonts/Source_Sans_3/: SourceSans3-Bold.ttf:Zone.Identifier
src/assets/themes/default/fonts/poppins/: Poppins-Bold.ttf:Zone.Identifier
src/assets/themes/default/templates/: single_post_v1.html  single_post_v2.html
src/core/application/: __init__.py  approve_post.py  contracts.py  create_post.py  publish_post_immediately.py
src/core/application/orchestrators/: __init__.py  create_post_from_scratch.py
src/core/application/prompts/: __init__.py  registry.py
src/core/application/prompts/copywriting/: __init__.py  v1_0.py
src/core/application/prompts/dossier/: __init__.py  v1_0.py
src/core/application/prompts/image_prompt_components/: __init__.py  v1_0.py
src/core/application/registries/: __init__.py  step_registry.py
src/core/application/use_cases/: __init__.py  copywriter.py  create_dossier.py  create_image.py  edit_image.py  exceptions.py  publish_scheduled_posts.py
src/core/domain/: __init__.py  entities.py  enums.py
src/ports/: __init__.py  audit_repository.py  content_generator.py  media_generator.py  observability.py  post_repository.py  social_publisher.py  state_repository.py  storage.py  theme_loader.py  workflow_repository.py
src/utils/: __init__.py  context_builder.py  resilience.py  state_manager.py
tests/adapters/persistence/: test_supabase_adapter_integration.py
tests/core/application/: test_approve_post.py
